TEST_PROGRAMS/VALID/07/var_decl_type_just_vars.go
// 1 var declaration specifying type only
package main

var x int
var y float64
var z string
var k rune
