TEST_PROGRAMS/INVALID/07/invalid_index_decl.go
package main

var x.y int
